--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -18,8 +18,28 @@ const EXPERIENCIE = [
   },
 ]
 ---
+<div class="relative pb-5 md:col-span-2">
+  <div class="sticky top-0">
+    <span class="text-yellow-400 -left-[42px] absolute rounded-full text-5xl"
+      >&bull;</span
+    >
 
-<ol class="relative mt-16">
+    <h3 class="text-xl font-bold text-yellow-400"> Main developer </h3>
+    <h4 class="font-semibold text-xl text-gray-600 dark:text-white"> Innovar Web </h4>
+    <time class="p-0 m-0 text-sm text-gray-600/80 dark:text-white/80"> Actualmente... </time>
+  </div>
+</div>
+<div class="relative flex flex-col gap-2 pb-4 text-gray-600 dark:text-gray-300 md:col-span-3">
+  <ul style="list-style-type: disc">
+    <li>Develop a full mobile application with React Native for control and prevention of maternal mortality during birth process.</li>
+    <li>Improve application performance offline using SQLITE to manage information and synchronize it with online data base.</li>
+    <li>Contribute to develop an agile environment by implementing SCRUM framework as a SCRUM Developer helping the team to reach an increase in performance up to 45%</li>
+    <li>Improved web page usability by 45% by redesigning it and reducing API consumption when it is not necessary.</li>
+    <li>Redesign the user interface of another client application to increase the usability, leading the project to increase user satisfaction up to 35%.</li>
+  </ul>
+</div>
+
+<!-- <ol class="relative mt-16">
   {
     EXPERIENCIE.map((experiencie) => (
       <li class="">
@@ -27,4 +47,4 @@ const EXPERIENCIE = [
       </li>
     ))
   }
-</ol>
+</ol> -->
