--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,6 +47,7 @@ const { description, title } = Astro.props
 
       body {
         color: rgba(17, 17, 17, 0.9);
+        /* color: white; */
         display: flex;
         flex-direction: column;
         min-height: 100vh;
