--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -51,8 +51,8 @@ const PROJECTS = [
       "Sistema de gestión de comanditas para restaurantes. Creada desde cero con React Js, Redux y Tailwind.",
     link: "",
     github: "https://github.com/HappyMan17/Arawana-comandita",
-    image: "/projects/videoLoader.webp",
-    video: null,
+    image: "",
+    video: "/projects/arawana.mp4",
     tags: [TAGS.REACT, TAGS.TAILWIND, TAGS.EXPRESS],
   },
 ]
