--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,7 +15,7 @@ import SocialPill from "@/components/SocialPill.astro"
     <div class="flex flex-col justify-center items-center">
       <img
         class="rounded-full shadow-lg size-32"
-        src="/profile-image.webp"
+        src="/sebastian.png"
         alt={personalImageAlt}
       />
     </div>
