feat: link to preview the restaurant project updated

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -48,9 +48,10 @@ const PROJECTS = [
   {
     title: "Restaurant Management System",
     description:
-      "Sistema de gestión de comanditas para restaurantes. Creada desde cero con React Js, Redux y Tailwind.",
-    link: "",
-    github: "https://github.com/HappyMan17/Arawana-comandita",
+      `Sistema de gestión de comanditas para restaurantes. Creada desde cero con React Js, Redux, Tailwind y Express.
+      Genera resumenes de venta diarios, al igual que control general en excel, además de impresion de comandas y facturas.`,
+    link: "https://restaurant-front-eight.vercel.app",
+    github: "",
     image: "",
     video: "/projects/arawana.mp4",
     tags: [TAGS.REACT, TAGS.TAILWIND, TAGS.EXPRESS],
