feat: experience and reference section updated

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -25,8 +25,8 @@ import SocialPill from "@/components/SocialPill.astro"
       class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
     >
       <strong
-        >Desarrollador de Software Front End</strong
-      > de Cali, Colombia 🇨🇴 con más de 2 años de experiencia. Especializado en el desarrollo de páginas web y applicaciónes mobile.
+        >Desarrollador de Software</strong
+      > de Cali, Colombia 🇨🇴 con más de 4 años de experiencia. Especializado en el desarrollo de aplicaciones web y mobile.
     </p>
     <nav class="flex flex-wrap gap-4 mt-8">
       <SocialPill href="mailto:sebasgrisales16@gmail.com">
