--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -26,7 +26,7 @@ import ExperienceItem from "./ExperienceItem.astro"
 
     <h3 class="text-xl font-bold text-yellow-400"> Main developer </h3>
     <h4 class="font-semibold text-xl text-gray-600 dark:text-white"> Innovar Web </h4>
-    <time class="p-0 m-0 text-sm text-gray-600/80 dark:text-white/80"> Actualmente... </time>
+    <time class="p-0 m-0 text-sm text-gray-600/80 dark:text-white/80"> Mayo 2020 a Abril 2024 </time>
   </div>
 </div>
 <div class="relative flex flex-col gap-2 pb-1 text-gray-600 dark:text-gray-300 md:col-span-3">
