--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,13 +4,17 @@ import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
 import SocialPill from "@/components/SocialPill.astro"
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 <div>
   <div class="flex flex-wrap-reverse flex-row w-full justify-start items-center">
     <h1
       class="max-w-[450px] text-3xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white mr-32 mt-5"
     >
-      Hola, soy <br> Sebastian Grisales
+      {t('hero.greeting')} <br> Sebastian Grisales
     </h1>
     <div class="flex flex-col justify-center items-center">
       <img
@@ -25,13 +29,13 @@ import SocialPill from "@/components/SocialPill.astro"
       class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
     >
       <strong
-        >Desarrollador de Software</strong
-      > de Cali, Colombia 🇨🇴 con más de 4 años de experiencia. Especializado en el desarrollo de aplicaciones web y mobile.
+        >{t('hero.role')}</strong
+      > {t('hero.description')}
     </p>
     <nav class="flex flex-wrap gap-4 mt-8">
       <SocialPill href="mailto:sebasgrisales16@gmail.com">
         <MailIcon class="size-4" />
-        Contáctame
+        {t('hero.contact')}
       </SocialPill>
       <SocialPill href="https://linkedin.com/in/sebastian-grisales">
         <LinkedInIcon class="size-4" />
@@ -43,7 +47,7 @@ import SocialPill from "@/components/SocialPill.astro"
         rel="noopener"
         class="flex items-center transition md:justify-center md:hover:scale-105"
       >
-        <Badge>Disponible para trabajar</Badge>
+        <Badge>{t('hero.openToWork')}</Badge>
       </a>
     </nav>
 </div>
