--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -9,15 +9,11 @@ import ProfileCheck from "@/components/icons/ProfileCheck.astro"
 import Projects from "@/components/Projects.astro"
 import SectionContainer from "@/components/SectionContainer.astro"
 import Hero from "@/components/Hero.astro"
-import { getLangFromUrl, useTranslations } from '../i18n/utils';
-
-const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
 ---
 
 <Layout
-  title={t('page.title')}
-  description={t('page.description')}
+  title="Porfolio Sebastian Grisales"
+  description="Portfolio Sebastian Grisales."
 >
   <main class="px-4">
     <SectionContainer class="pb-16 pt-24 md:pd-36">
@@ -31,7 +27,7 @@ const t = useTranslations(lang);
           class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
         >
           <Briefcase class="size-8" />
-          {t('section.experience')}
+          Experiencia laboral
         </h2>
         <Experience />
       </SectionContainer>
@@ -41,7 +37,7 @@ const t = useTranslations(lang);
           class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
         >
           <CodeIcon class="size-7" />
-          {t('section.projects')}
+          Proyectos
         </h2>
         <Projects />
       </SectionContainer>
@@ -51,7 +47,7 @@ const t = useTranslations(lang);
           class="flex items-center mb-6 text-3xl font-semibold gap-x-8 text-black/80 dark:text-white"
         >
           <ProfileCheck class="size-8" />
-          {t('section.aboutMe')}
+          Sobre mí
         </h2>
         <AboutMe />
       </SectionContainer>
